# DAEMON

./: CLAUDE.md  README.md  UPGRADE_PLAN.md  index.html  package-lock.json  package.json  vite.config.ts
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/scripts/: slack_creds.py
src-tauri/src/: lib.rs
src-tauri/src/commands/: agent.rs  gitlab.rs  gmail.rs  launchdarkly.rs  linear.rs  mod.rs  settings.rs  slack.rs
src-tauri/src/models/: gitlab.rs  gmail.rs  launchdarkly.rs  linear.rs  mod.rs  slack.rs
src-tauri/src/services/: gmail.rs  launchdarkly.rs  mod.rs  slack.rs
src/components/ai/: ActionMenu.module.css  ActionMenu.tsx  AgentPromptBar.module.css  AgentPromptBar.tsx  TerminalDrawer.module.css  TerminalDrawer.tsx
src/components/layout/: AppShell.module.css  AppShell.tsx  DashboardGrid.module.css  DashboardGrid.tsx  LavaBackground.module.css  LavaBackground.tsx  Panel.tsx  (+12 more)
src/config/: aiActions.ts  personaTypes.ts  personas.ts
src/hooks/: index.ts  useCommsFlags.ts  useCorrelateItem.ts  useCorrelationEngine.ts  useEventContext.ts  useGmailAlerts.ts  useThreadReplies.ts  useTodos.ts  useWatchedThreads.ts
src/services/: notifications.ts  tauri-bridge.ts
src/stores/: agentStore.ts  chatStore.ts  layoutStore.ts  mcpHealthStore.ts  personaStore.ts  threadSubscriptionStore.ts  todoStore.ts
src/theme/: globals.css  variables.css
src/themes/: ThemeProvider.tsx  cyberpunk.ts  trek-tng.ts  trek-tos.ts  types.ts
src/types/: models.ts
src/utils/: signals.ts  time.ts
(+51 files in other folders)
